--- a/DailyReport.html
+++ b/DailyReport.html
@@ -42,6 +42,13 @@
             font-size: 18px;
         }
 
+        .date {
+            text-align: center;
+            color: #555;
+            font-size: 14px;
+            margin-top: -10px;
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
@@ -94,6 +101,7 @@
     <div class="container">
         <div class="column" id="morningReport">
             <h2>Morning Report</h2>
+            <p class="date" id="morningDate"></p>
             <table contenteditable="true">
                 <thead>
                     <tr>
@@ -231,6 +239,7 @@
         </div>
         <div class="column" id="eveningReport">
             <h2>Evening Report</h2>
+            <p class="date" id="eveningDate"></p>
             <table contenteditable="true">
                 <thead>
                     <tr>
@@ -359,6 +368,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const currentDate = new Date().toLocaleDateString();
+            document.getElementById('morningDate').innerText = `Date: ${currentDate}`;
+            document.getElementById('eveningDate').innerText = `Date: ${currentDate}`;
+        });
+
         document.getElementById('downloadMorningPdf').addEventListener('click', function () {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
