--- a/Accounts.html
+++ b/Accounts.html
@@ -134,9 +134,9 @@
             <!-- Inventory Pricing Card -->
             <div class="card">
                 <i class="fas fa-boxes"></i>
-                <h2>Inventory Pricing</h2>
+                <h2>Credit purchases</h2>
                 <p>Check and update the pricing of inventory items.</p>
-                <a href="Inventoryprice.html"><button>Open</button></a>
+                <a href="Creditpurchase.html"><button>Open</button></a>
             </div>
 
             <!-- Purchases Sheet Card -->
