--- a/Accounts.html
+++ b/Accounts.html
@@ -134,8 +134,9 @@
             <!-- Inventory Pricing Card -->
             <div class="card">
                 <i class="fas fa-boxes"></i>
-                <h2>Credit purchases</h2>
+                <h2>Credit Purchases</h2>
                 <p>Check and update the pricing of inventory items.</p>
+                <!-- Ensure this file exists at the specified location -->
                 <a href="Creditpurchase.html"><button>Open</button></a>
             </div>
 
