--- a/Accounts.html
+++ b/Accounts.html
@@ -131,7 +131,7 @@
                 <a href="Taskexpens.html"><button>Open</button></a>
             </div>
 
-            <!-- Inventory Pricing Card -->
+            <!-- credit purchase Card -->
             <div class="card">
                 <i class="fas fa-boxes"></i>
                 <h2>Credit Purchases</h2>
