--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -177,7 +177,7 @@
     <!-- Add Firebase SDK -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getDatabase, ref, push, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+        import { getDatabase, ref, push, set, onValue, update, remove, child, get } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
 
         // Firebase configuration
         const firebaseConfig = {
@@ -273,6 +273,23 @@
                 console.log("Task updated in Firebase:", task); // Debugging
             }).catch((error) => {
                 console.error("Error updating task in Firebase:", error); // Debugging
+            });
+        }
+
+        // Move completed task to completed tasks in Firebase
+        function moveCompletedTask(task, taskKey) {
+            const completedTasksRef = ref(db, 'completedTasks/');
+            const newCompletedTaskRef = push(completedTasksRef);
+            set(newCompletedTaskRef, task).then(() => {
+                console.log("Task moved to completed tasks:", task); // Debugging
+                const taskRef = ref(db, `tasks/${taskKey}`);
+                remove(taskRef).then(() => {
+                    console.log("Task removed from tasks:", task); // Debugging
+                }).catch((error) => {
+                    console.error("Error removing task from tasks:", error); // Debugging
+                });
+            }).catch((error) => {
+                console.error("Error moving task to completed tasks:", error); // Debugging
             });
         }
 
@@ -427,7 +444,7 @@
                     completeButton.addEventListener('click', () => {
                         task.endDate = new Date().toLocaleDateString();
                         task.status = 'Completed';
-                        updateTask(task, task.key);
+                        moveCompletedTask(task, task.key);
                         updateTable();
                     });
 
@@ -447,8 +464,7 @@
 
         // Show only completed tasks when the "Completed Tasks" button is clicked
         viewCompletedBtn.addEventListener('click', () => {
-            const completedTasksFiltered = tasks.filter(task => task.status === 'Completed');
-            updateTable(false); // Only include completed tasks
+            window.location.href = 'completed.html';
         });
 
         // Populate project dropdown in the add task form
