--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -177,7 +177,7 @@
     <!-- Add Firebase SDK -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getDatabase, ref, push, set, onValue, update, remove, child, get } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+        import { getDatabase, ref, push, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
 
         // Firebase configuration
         const firebaseConfig = {
@@ -229,6 +229,7 @@
         };
 
         let tasks = [];
+        let completedTasks = [];
 
         // Clear all tasks from Firebase
         function clearTasks() {
@@ -271,25 +272,38 @@
             const taskRef = ref(db, `tasks/${taskKey}`);
             update(taskRef, task).then(() => {
                 console.log("Task updated in Firebase:", task); // Debugging
+                if (task.status === 'Completed') {
+                    moveToCompletedTasks(task, taskKey);
+                }
             }).catch((error) => {
                 console.error("Error updating task in Firebase:", error); // Debugging
             });
         }
 
-        // Move completed task to completed tasks in Firebase
-        function moveCompletedTask(task, taskKey) {
-            const completedTasksRef = ref(db, 'completedTasks/');
-            const newCompletedTaskRef = push(completedTasksRef);
-            set(newCompletedTaskRef, task).then(() => {
-                console.log("Task moved to completed tasks:", task); // Debugging
-                const taskRef = ref(db, `tasks/${taskKey}`);
-                remove(taskRef).then(() => {
-                    console.log("Task removed from tasks:", task); // Debugging
-                }).catch((error) => {
-                    console.error("Error removing task from tasks:", error); // Debugging
+        // Move completed tasks to completedTask.html
+        function moveToCompletedTasks(task, taskKey) {
+            // Remove task from current tasks
+            const taskIndex = tasks.findIndex(t => t.key === taskKey);
+            if (taskIndex > -1) {
+                tasks.splice(taskIndex, 1);
+            }
+
+            // Add task to completed tasks
+            completedTasks.push(task);
+            updateCompletedTasksPage();
+            updateTable();
+        }
+
+        // Update the completed tasks page
+        function updateCompletedTasksPage() {
+            const completedTasksRef = ref(db, 'completedtasks/');
+            remove(completedTasksRef).then(() => {
+                completedTasks.forEach(task => {
+                    const newTaskRef = push(completedTasksRef);
+                    set(newTaskRef, task);
                 });
             }).catch((error) => {
-                console.error("Error moving task to completed tasks:", error); // Debugging
+                console.error("Error updating completed tasks:", error);
             });
         }
 
@@ -317,21 +331,13 @@
         taskForm.addEventListener('submit', function(event) {
             event.preventDefault();
 
-            const taskId = document.getElementById('taskId').value;
             const projectName = document.getElementById('projectName').value;
             const taskDescription = document.getElementById('taskDescription').value;
             const location = document.getElementById('location').value;
             const priority = document.getElementById('priority').value;
 
-            // Check if taskId already exists
-            const taskExists = tasks.some(task => task.taskId === taskId);
-            if (taskExists) {
-                alert('Task ID already exists. Please enter a unique Task ID.');
-                return;
-            }
-
             const newTask = {
-                taskId,
+                taskId: projectNames[projectName] + Date.now().toString().slice(-4), // Unique ID based on timestamp
                 projectName,
                 taskDescription,
                 location,
@@ -349,12 +355,10 @@
         });
 
         // Update the task table with tasks
-        function updateTable(filterCompleted = false) {
+        function updateTable(filteredTasks = tasks) {
             taskTable.innerHTML = ''; // Clear the table
 
-            tasks.forEach((task) => {
-                if (filterCompleted && task.status === 'Completed') return;
-
+            filteredTasks.forEach((task) => {
                 const row = taskTable.insertRow();
 
                 // Task ID column with text input
@@ -444,7 +448,7 @@
                     completeButton.addEventListener('click', () => {
                         task.endDate = new Date().toLocaleDateString();
                         task.status = 'Completed';
-                        moveCompletedTask(task, task.key);
+                        updateTask(task, task.key);
                         updateTable();
                     });
 
@@ -459,12 +463,12 @@
 
         // Show all tasks when "All Tasks" button is clicked
         viewAllBtn.addEventListener('click', () => {
-            updateTable(true); // Do not include completed tasks
+            updateTable(tasks);
         });
 
-        // Show only completed tasks when the "Completed Tasks" button is clicked
+        // Navigate to completed tasks page when the "Completed Tasks" button is clicked
         viewCompletedBtn.addEventListener('click', () => {
-            window.location.href = 'completed.html';
+            window.location.href = 'completedTasks.html';
         });
 
         // Populate project dropdown in the add task form
@@ -540,9 +544,6 @@
             <span class="close" id="closeModal">&times;</span>
             <h2>Add Task</h2>
             <form id="taskForm">
-                <label for="taskId">Task ID:</label>
-                <input type="text" id="taskId" required><br><br>
-
                 <label for="projectName">Project Name:</label>
                 <select id="projectName" required></select><br><br>
 
