--- a/completedTasks.html
+++ b/completedTasks.html
@@ -32,44 +32,92 @@
             color: white;
         }
     </style>
+    <!-- Add Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+        import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7EgVqWwPje0",
+            authDomain: "project-management-a1c5e.firebaseapp.com",
+            databaseURL: "https://project-management-a1c5e-default-rtdb.firebaseio.com/",
+            projectId: "project-management-a1c5e",
+            storageBucket: "project-management-a1c5e.appspot.com",
+            messagingSenderId: "662718236281",
+            appId: "1:662718236281:web:e859b39671aefa67e436a8",
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+
+        // Get elements from the DOM
+        const taskTable = document.getElementById('taskTable').getElementsByTagName('tbody')[0];
+
+        let completedTasks = [];
+
+        // Load completed tasks from Firebase
+        function loadCompletedTasks() {
+            const completedTasksRef = ref(db, 'completedtasks/');
+            onValue(completedTasksRef, (snapshot) => {
+                const data = snapshot.val();
+                completedTasks = [];
+                for (const key in data) {
+                    completedTasks.push({ key, ...data[key] });
+                }
+                updateTable();
+            });
+        }
+
+        // Update the task table with completed tasks
+        function updateTable() {
+            taskTable.innerHTML = ''; // Clear the table
+
+            completedTasks.forEach((task) => {
+                const row = taskTable.insertRow();
+
+                row.insertCell(0).innerText = task.taskId;
+                row.insertCell(1).innerText = task.projectName;
+                row.insertCell(2).innerText = task.taskDescription;
+                row.insertCell(3).innerText = task.location;
+                row.insertCell(4).innerText = task.priority;
+                row.insertCell(5).innerText = task.status;
+                row.insertCell(6).innerText = task.assignedTo || 'N/A';
+                row.insertCell(7).innerText = task.startDate || 'N/A';
+                row.insertCell(8).innerText = task.endDate || 'N/A';
+                row.insertCell(9).innerText = task.duration || 'N/A';
+            });
+        }
+
+        // Load completed tasks on page load
+        loadCompletedTasks();
+    </script>
 </head>
+
 <body>
+    <header>
+        <h1>Completed Tasks</h1>
+    </header>
 
-<header>
-    <h1>Completed Tasks</h1>
-</header>
-
-<table id="completedTaskTable">
-    <thead>
-        <tr>
-            <th>Project Name</th>
-            <th>Task Description</th>
-            <th>Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        <!-- Completed task rows will be added dynamically here -->
-    </tbody>
-</table>
-
-<script>
-    const completedTaskTable = document.getElementById('completedTaskTable').getElementsByTagName('tbody')[0];
-
-    let completedTasks = JSON.parse(localStorage.getItem('completedTasks')) || [];
-
-    function updateCompletedTable() {
-        completedTaskTable.innerHTML = '';
-        completedTasks.forEach(task => {
-            const row = completedTaskTable.insertRow();
-            row.insertCell(0).innerText = task.projectName;
-            row.insertCell(1).innerText = task.taskDescription;
-            row.insertCell(2).innerText = task.status;
-        });
-    }
-
-    // Initialize the table with completed tasks
-    updateCompletedTable();
-</script>
-
+    <table id="taskTable">
+        <thead>
+            <tr>
+                <th>Task ID</th>
+                <th>Project Name</th>
+                <th>Task Description</th>
+                <th>Location</th>
+                <th>Priority</th>
+                <th>Status</th>
+                <th>Assigned To</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Duration</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Completed task rows will be added dynamically here -->
+        </tbody>
+    </table>
 </body>
 </html>
