--- a/Chris.html
+++ b/Chris.html
@@ -142,10 +142,9 @@
             }
         }
     </style>
-    <!-- Add Firebase SDK -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getDatabase, ref, push, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+        import { getDatabase, ref, push, set, onValue, update, remove, enableIndexedDbPersistence } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
 
         // Firebase configuration
         const firebaseConfig = {
@@ -162,8 +161,7 @@
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
 
-        // Get elements from the DOM
-        document.addEventListener('DOMContentLoaded', (event) => {
+        document.addEventListener('DOMContentLoaded', () => {
             const formContainer = document.getElementById('formContainer');
             const taskForm = document.getElementById('taskForm');
             const taskTableBody = document.getElementById('taskTableBody');
@@ -172,143 +170,85 @@
             let tasks = [];
 
             // Load tasks from Firebase
-            function loadTasks() {
+            const loadTasks = () => {
                 const tasksRef = ref(db, 'tasks/');
                 onValue(tasksRef, (snapshot) => {
                     const data = snapshot.val();
                     tasks = data ? Object.entries(data) : [];
                     updateTable(tasks);
                 });
-            }
+            };
 
             // Save task to Firebase
-            function saveTask(task) {
+            const saveTask = (task) => {
                 const tasksRef = ref(db, 'tasks/');
                 const newTaskRef = push(tasksRef);
-                set(newTaskRef, task).then(() => {
-                    console.log("Task saved to Firebase:", task);
-                }).catch((error) => {
-                    console.error("Error saving task to Firebase:", error);
-                });
-            }
+                set(newTaskRef, task)
+                    .then(() => console.log("Task saved successfully:", task))
+                    .catch((error) => console.error("Error saving task:", error));
+            };
 
-            // Update task in Firebase
-            function updateTask(task, taskId) {
-                const taskRef = ref(db, `tasks/${taskId}`);
-                update(taskRef, task).then(() => {
-                    console.log("Task updated in Firebase:", task);
-                }).catch((error) => {
-                    console.error("Error updating task in Firebase:", error);
-                });
-            }
+            // Retry logic
+            const retrySave = (task, retries = 3) => {
+                const tasksRef = ref(db, 'tasks/');
+                const newTaskRef = push(tasksRef);
+                set(newTaskRef, task)
+                    .then(() => console.log("Task saved on retry:", task))
+                    .catch((error) => {
+                        if (retries > 0) {
+                            console.log(`Retrying... attempts left: ${retries}`);
+                            setTimeout(() => retrySave(task, retries - 1), 2000);
+                        } else {
+                            console.error("Failed to save task after retries:", error);
+                        }
+                    });
+            };
 
-            // Remove task from Firebase
-            function deleteTask(taskId) {
-                const taskRef = ref(db, `tasks/${taskId}`);
-                remove(taskRef).then(() => {
-                    console.log("Task removed from Firebase:", taskId);
-                }).catch((error) => {
-                    console.error("Error removing task from Firebase:", error);
-                });
-            }
+            const toggleForm = () => {
+                formContainer.style.display = formContainer.style.display === 'none' || formContainer.style.display === '' ? 'block' : 'none';
+            };
 
-            // Toggle the form visibility
-            function toggleForm() {
-                if (formContainer.style.display === 'none' || formContainer.style.display === '') {
-                    formContainer.style.display = 'block';
-                } else {
-                    formContainer.style.display = 'none';
-                }
-                console.log(`Form display toggled to: ${formContainer.style.display}`);
-            }
-
-            // Handle form submission
-            function addTask(event) {
+            const addTask = (event) => {
                 event.preventDefault();
-
-                const taskDescription = document.getElementById('taskDescription').value;
+                const taskDescription = document.getElementById('taskDescription').value.trim();
                 const taskPriority = document.getElementById('taskPriority').value;
 
-                if (taskDescription && taskPriority) {
-                    const task = {
-                        description: taskDescription,
-                        priority: taskPriority,
-                        dateAdded: new Date().toLocaleDateString(),
-                        status: 'active'
-                    };
-
-                    saveTask(task);
-                    taskForm.reset();
-                    formContainer.style.display = 'none';
-                } else {
-                    alert('Please fill out all fields.');
+                if (!taskDescription || !taskPriority) {
+                    alert("All fields are required.");
+                    return;
                 }
-            }
 
-            // Mark task as completed
-            function markAsCompleted(taskId, row) {
-                row.classList.add('completed');
-                const updatedTask = {
-                    ...tasks.find(task => task[0] === taskId)[1],
-                    status: 'completed'
-                };
-                updateTask(updatedTask, taskId);
-            }
+                const task = { description: taskDescription, priority: taskPriority, dateAdded: new Date().toLocaleDateString(), status: 'active' };
+                saveTask(task);
+                taskForm.reset();
+                toggleForm();
+            };
 
-            // Delete task
-            function deleteTaskRow(taskId, row) {
-                deleteTask(taskId);
-                row.remove();
-            }
-
-            // Update the table with tasks
-            function updateTable(tasks) {
-                taskTableBody.innerHTML = ''; // Clear the table
-
-                tasks.forEach(([taskId, task]) => {
+            const updateTable = (tasks) => {
+                taskTableBody.innerHTML = '';
+                tasks.forEach(([id, task]) => {
                     const row = taskTableBody.insertRow();
-                    row.insertCell(0).innerText = task.description;
-                    row.insertCell(1).innerText = task.priority;
-                    row.insertCell(2).innerText = task.dateAdded;
-
+                    row.insertCell(0).textContent = task.description;
+                    row.insertCell(1).textContent = task.priority;
+                    row.insertCell(2).textContent = task.dateAdded;
                     const actionCell = row.insertCell(3);
                     if (task.status === 'completed') {
                         row.classList.add('completed');
-                        actionCell.innerText = 'Completed';
+                        actionCell.textContent = 'Completed';
                     } else {
                         const completeButton = document.createElement('button');
-                        completeButton.innerText = 'Mark as Completed';
-                        completeButton.onclick = () => markAsCompleted(taskId, row);
+                        completeButton.textContent = 'Complete';
+                        completeButton.onclick = () => {
+                            task.status = 'completed';
+                            set(ref(db, `tasks/${id}`), task);
+                        };
                         actionCell.appendChild(completeButton);
                     }
-
-                    const deleteButton = document.createElement('button');
-                    deleteButton.innerText = 'Delete';
-                    deleteButton.style.marginLeft = '10px';
-                    deleteButton.onclick = () => deleteTaskRow(taskId, row);
-                    actionCell.appendChild(deleteButton);
                 });
-            }
+            };
 
-            // Filter tasks
-            function filterTasks(status) {
-                const filteredTasks = tasks.filter(([taskId, task]) => status === 'all' || task.status === status);
-                updateTable(filteredTasks);
-            }
-
-            // Assign event listeners
-            document.querySelector('.toggle-button').addEventListener('click', toggleForm);
-            taskForm.addEventListener('submit', addTask);
-
-            filterButtons.forEach(button => {
-                button.addEventListener('click', () => {
-                    const status = button.getAttribute('data-status');
-                    filterTasks(status);
-                });
-            });
-
-            // Initial load of tasks from Firebase
             loadTasks();
+            taskForm.addEventListener('submit', addTask);
         });
     </script>
 </head>
@@ -316,43 +256,19 @@
 <body>
     <div class="container">
         <h1>Chris To-Do</h1>
-
-        <button class="toggle-button">Add Task Form</button>
-
+        <button class="toggle-button" onclick="toggleForm()">Add Task</button>
         <div class="form-container" id="formContainer">
             <form id="taskForm">
-                <label for="taskDescription">Task Description:</label>
-                <input type="text" id="taskDescription" placeholder="Enter task description" required>
-
-                <label for="taskPriority">Priority:</label>
-                <select id="taskPriority" required>
-                    <option value="High">High</option>
-                    <option value="Medium">Medium</option>
-                    <option value="Low">Low</option>
-                </select>
-
-                <button type="submit">Add Task</button>
+                <label>Task:</label>
+                <input id="taskDescription" />
+                <label>Priority</label>
+                <select id="taskPriority"></select>
+                <button type="submit">Add</button>
             </form>
         </div>
-
-        <div class="filter-buttons">
-            <button data-status="all">All</button>
-            <button data-status="active">Active</button>
-            <button data-status="completed">Completed</button>
-        </div>
-
         <table>
-            <thead>
-                <tr>
-                    <th>Task Description</th>
-                    <th>Priority</th>
-                    <th>Date Added</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="taskTableBody">
-                <!-- Dynamic rows will be added here -->
-            </tbody>
+            <thead><tr><th>Task</th><th>Priority</th><th>Date</th><th>Action</th></tr></thead>
+            <tbody id="taskTableBody"></tbody>
         </table>
     </div>
 </body>
