--- a/Chris.html
+++ b/Chris.html
@@ -176,7 +176,12 @@
                 const tasksRef = ref(db, 'tasks/');
                 onValue(tasksRef, (snapshot) => {
                     const data = snapshot.val();
-                    tasks = data ? Object.entries(data) : [];
+                    if (data) {
+                        tasks = Object.entries(data);
+                    } else {
+                        tasks = [];
+                    }
+                    console.log("Tasks loaded from Firebase:", tasks);
                     updateTable(tasks);
                 });
             }
@@ -187,6 +192,7 @@
                 const newTaskRef = push(tasksRef);
                 set(newTaskRef, task).then(() => {
                     console.log("Task saved to Firebase:", task);
+                    loadTasks(); // Reload tasks after saving
                 }).catch((error) => {
                     console.error("Error saving task to Firebase:", error);
                 });
@@ -197,6 +203,7 @@
                 const taskRef = ref(db, `tasks/${taskId}`);
                 update(taskRef, task).then(() => {
                     console.log("Task updated in Firebase:", task);
+                    loadTasks(); // Reload tasks after updating
                 }).catch((error) => {
                     console.error("Error updating task in Firebase:", error);
                 });
@@ -207,6 +214,7 @@
                 const taskRef = ref(db, `tasks/${taskId}`);
                 remove(taskRef).then(() => {
                     console.log("Task removed from Firebase:", taskId);
+                    loadTasks(); // Reload tasks after deleting
                 }).catch((error) => {
                     console.error("Error removing task from Firebase:", error);
                 });
